--- a/style.css
+++ b/style.css
@@ -54,12 +54,12 @@ nav li{
     border-radius: .3rem;
     padding: 1rem;
     background-image: url('bg.jpg');
-    background-position: center center;
+    background-position: center left;
 }
 
 #bottom{
     position: sticky;
-    height: 15vh;
+    height: 17vh;
     bottom: 0;
     background-color: black;
     display: flex;
@@ -139,10 +139,19 @@ width:2rem;
 
 .songInfo{
    color: white;
-  margin: .5rem;
+  margin-top: 1.5rem;
+  font-family: 'Varela Round', sans-serif;
+  font-size: .8rem;
  
 }
 .songInfo img{
-    height: 1.5rem;
+   
+    height: 1rem;
     width: 3.5rem;
+    opacity: 0;
+    transition: opacity 0.4s ease-in;
+    
+}
+#myProgressBar{
+    cursor: pointer;
 }
